--- a/demo-communication-api/build.gradle
+++ b/demo-communication-api/build.gradle
@@ -13,11 +13,14 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVer}"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 
     implementation "javax.persistence:javax.persistence-api:2.2"
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+
+    implementation "org.springframework.data:spring-data-commons:${springDataVer}"
+    implementation "org.springframework.data:spring-data-jpa:${springDataVer}"
 }
 
 test {
