--- a/demo-communication-impl/build.gradle
+++ b/demo-communication-impl/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation "org.springframework:spring-beans:${springVersion}"
     implementation "javax.persistence:javax.persistence-api:2.2"
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+
+    implementation "org.springframework.data:spring-data-commons:${springDataVer}"
+    implementation "org.springframework.data:spring-data-jpa:${springDataVer}"
 }
 
 test {
