--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ kotlinVer=1.5.30
 springVersion=5.3.8
 springbootVersion=2.5.2
 springDependencyVer=1.0.11.RELEASE
+springDataVer=2.5.4
 apacheCommonVersion=2.7.0
 aspectjVersion=1.9.4
 jstlVersion=1.2
@@ -13,7 +14,7 @@ jstlVersion=1.2
 tomcatVersion=9.0.52
 
 eclipselinkVersion=:2.7.4
-bouncycastleVersion=1.62
+bouncycastleVersion=1.69
 jacksonVersion=2.10.3
 nimbusJoseVersion=7.7
 slf4jVersion=1.7.31
