--- a/demo-communication-web/src/main/resources/db.properties
+++ b/demo-communication-web/src/main/resources/db.properties
@@ -1,16 +1,19 @@
+# common
+jpa.showSql=true
+jpa.dialect=org.hibernate.dialect.H2Dialect
+
 # postgresql
-# db.driver=org.postgresql.Driver
-# db.url=jdbc:postgresql://localhost:5432/test-db
-# db.username=harryng
-# db.password=harryng
-# db.minPoolSize=1
-# db.maxPoolSize=5
+#db.driver=org.postgresql.Driver
+#db.url=jdbc:postgresql://localhost:5432/test-db
+#db.username=harryng
+#db.password=harryng
+#db.minPoolSize=1
+#db.maxPoolSize=5
 
 ## H2
 db.driver=org.h2.Driver
 db.url=jdbc:h2:./db/test_db
 db.username=sa
-db.password=
+db.password=123456
 db.minPoolSize=1
 db.maxPoolSize=5
-
