--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,12 @@
+org.gradle.jvmargs=-Xmx1024m
 jdkVersion=11
 kotlinVer=1.5.30
+# common
+kotlinStdLibVer=1.5.31
+kotlin.code.style=official
+kotlinCoroutinesVer=1.5.2
 
-#springVersion=5.2.16.RELEASE
-#springbootVersion=2.3.12.RELEASE
+# spring
 springVersion=5.3.8
 springbootVersion=2.5.2
 springDependencyVer=1.0.11.RELEASE
@@ -10,6 +14,7 @@ springDataVer=2.5.4
 apacheCommonVersion=2.7.0
 aspectjVersion=1.9.4
 jstlVersion=1.2
+
 #tomcatVersion=10.0.10
 tomcatVersion=9.0.52
 
@@ -24,3 +29,8 @@ junitVersion=5.7.0
 h2Version=1.4.200
 pgsqlVersion=42.2.12
 keycloakVer=15.0.0
+
+# grpc
+grpcVer=1.41.0
+protobufVer=3.18.0
+grpcKotlinStubVer=1.1.0
