--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ kotlin.code.style=official
 kotlinCoroutinesVer=1.5.2
 
 # spring
-springVersion=5.3.8
-springbootVersion=2.5.2
+springVersion=5.3.10
+springbootVersion=2.5.5
 springDependencyVer=1.0.11.RELEASE
 springDataVer=2.5.4
 apacheCommonVersion=2.7.0
@@ -30,6 +30,8 @@ h2Version=1.4.200
 pgsqlVersion=42.2.12
 keycloakVer=15.0.0
 
+gsonVersion=2.8.0
+#hibernateVer=5.5.7.Final
 # grpc
 grpcVer=1.41.0
 protobufVer=3.18.0
