- change to html

--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -54,7 +54,7 @@ spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.html
 server.error.path=/WEB-INF/error/
 server.error.suffix=.html
-server.error.whitelabel.enabled=true
+server.error.whitelabel.enabled=false
 
 # spring.mvc.static-path-pattern=/**
 #server.tomcat.additional-tld-skip-patterns=derbyLocale_*.jar,jaxb-api.jar,jsr173_1.0_api.jar,jaxb-impl.jar,jaxb-core.jar,activation.jar
