--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -52,7 +52,7 @@ management.endpoint.shutdown.enabled=true
 # spring.thymeleaf.enabled=false
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.html
-server.error.path=/WEB-INF/error/
+server.error.path=/error/
 server.error.suffix=.html
 server.error.whitelabel.enabled=false
 
