--- a/demo-communication-web/build.gradle
+++ b/demo-communication-web/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 plugins {
     id "java"
     id "org.jetbrains.kotlin.jvm"
+//    id "war"
     id "org.springframework.boot" version "${springbootVersion}"
     id "io.spring.dependency-management" version "${springDependencyVer}"
 }
@@ -14,7 +15,6 @@ group 'org.harryng.demo.communication'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
     mavenCentral()
 }
 
