--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -50,10 +50,10 @@ management.endpoint.shutdown.enabled=true
 #camel.springboot.xmlRests = classpath:spring/rest/*.xml
 
 # spring.thymeleaf.enabled=false
-spring.mvc.view.prefix=/WEB-INF/pages/
-spring.mvc.view.suffix=.html
+#spring.mvc.view.prefix=/META-INF/resources/WEB-INF/pages/
+#spring.mvc.view.suffix=.html
 server.error.path=/error/
-server.error.suffix=.html
+#server.error.suffix=.html
 server.error.whitelabel.enabled=false
 
 # spring.mvc.static-path-pattern=/**
