--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx1024m
 jdkVersion=11
-kotlinVer=1.5.30
+kotlinVer=1.5.31
 # common
-kotlinStdLibVer=1.5.31
+#kotlinStdLibVer=1.5.31
 kotlin.code.style=official
 kotlinCoroutinesVer=1.5.2
 
