--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-logging.config=classpath:logback.xml
-#logging.config=classpath:log4j.xml
+#logging.config=classpath:logback.xml
+logging.config=classpath:log4j2.xml
 # the options from org.apache.camel.spring.boot.CamelConfigurationProperties can be configured here
 #camel.springboot.name=camel
 # lets listen on all ports to ensure we can be invoked from the pod IP
