- change to thymeleaf layout - change log to log4j2 - disable java session

--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -55,7 +55,10 @@ management.endpoint.shutdown.enabled=true
 server.error.path=/error/
 #server.error.suffix=.html
 server.error.whitelabel.enabled=false
-
+# disable http session
+server.servlet.session.persistent=false
+server.servlet.session.timeout=1
+server.servlet.session.cookie.max-age=0
 # spring.mvc.static-path-pattern=/**
 #server.tomcat.additional-tld-skip-patterns=derbyLocale_*.jar,jaxb-api.jar,jsr173_1.0_api.jar,jaxb-impl.jar,jaxb-core.jar,activation.jar
 #server.tomcat.additional-tld-skip-patterns=jaxb-api.jar,jaxb-impl.jar,jaxb-core.jar
