--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ kotlinCoroutinesVer=1.5.2
 springVersion=5.3.10
 springbootVersion=2.5.5
 springDependencyVer=1.0.11.RELEASE
+springSessionVersion=2.5.2
 springDataVer=2.5.4
 apacheCommonVersion=2.7.0
 aspectjVersion=1.9.4
