--- a/demo-communication-web/build.gradle
+++ b/demo-communication-web/build.gradle
@@ -17,11 +17,11 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.session:spring-session-bom:2021.0.2'
-    }
-}
+//dependencyManagement {
+//    imports {
+//        mavenBom 'org.springframework.session:spring-session-bom:2021.0.2'
+//    }
+//}
 dependencies {
     implementation project(":demo-communication-api")
     implementation project(":demo-communication-impl")
