--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -57,6 +57,7 @@ server.error.path=/error/
 server.error.whitelabel.enabled=false
 # config http session to db
 spring.session.store-type=jdbc
+spring.session.jdbc.cleanup-cron=0 * * * * *
 server.servlet.session.timeout=10m
 # disable http session
 #server.servlet.session.persistent=false
