- change to thymeleaf layout - change log to log4j2 - config java session to db, change session id name

--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -57,8 +57,8 @@ server.error.path=/error/
 server.error.whitelabel.enabled=false
 # config http session to db
 spring.session.store-type=jdbc
-spring.session.jdbc.cleanup-cron=0 * * * * *
-server.servlet.session.timeout=5m
+#spring.session.jdbc.cleanup-cron=0 * * * * *
+#server.servlet.session.timeout=5m
 # disable http session
 #server.servlet.session.persistent=false
 #server.servlet.session.timeout=1
