- separate session db

--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -56,9 +56,14 @@ server.error.path=/error/
 #server.error.suffix=.html
 server.error.whitelabel.enabled=false
 # config http session to db
-spring.session.store-type=jdbc
-spring.session.jdbc.cleanup-cron=0 * * * * *
-server.servlet.session.timeout=5m
+#spring.session.store-type=jdbc
+#session.datasource.url=jdbc:postgresql://localhost/./session_db
+#session.datasource.driverClassName=org.h2.Driver
+#session.datasource.username=sa
+#session.datasource.password=123456
+#spring.session.jdbc.cleanup-cron=0 * * * * *
+#server.servlet.session.timeout=5m
+
 # disable http session
 #server.servlet.session.persistent=false
 #server.servlet.session.timeout=1
