--- a/demo-communication-web/src/main/resources/db.properties
+++ b/demo-communication-web/src/main/resources/db.properties
@@ -18,3 +18,10 @@ db.username=sa
 db.password=123456
 db.minPoolSize=1
 db.maxPoolSize=5
+
+session.db.driver=org.h2.Driver
+session.db.url=jdbc:h2:tcp://localhost/./session_db
+session.db.username=sa
+session.db.password=123456
+session.db.minPoolSize=1
+session.db.maxPoolSize=5
