--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -49,16 +49,16 @@ management.endpoint.shutdown.enabled=true
 # scan in the com/foo/routes classpath
 #camel.springboot.xmlRests = classpath:spring/rest/*.xml
 
-# spring.thymeleaf.enabled=false
+spring.thymeleaf.enabled=false
 #spring.mvc.view.prefix=/META-INF/resources/WEB-INF/pages/
 #spring.mvc.view.suffix=.html
 server.error.path=/error/
 #server.error.suffix=.html
 server.error.whitelabel.enabled=false
 # config http session to db
-spring.session.store-type=jdbc
-spring.session.jdbc.cleanup-cron=0 * * * * *
-server.servlet.session.timeout=5m
+spring.session.store-type=none
+#spring.session.jdbc.cleanup-cron=0 * * * * *
+#server.servlet.session.timeout=5m
 # disable http session
 #server.servlet.session.persistent=false
 #server.servlet.session.timeout=1
