- change to thymeleaf layout - change log to log4j2 - config java session to db, change session id name, cache user

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ allprojects {
         mavenLocal()
     }
     configurations.implementation {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
     }
     dependencies {
         implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCoroutinesVer}"
