--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,7 @@ h2Version=1.4.200
 pgsqlVersion=42.2.12
 keycloakVer=15.0.0
 
+hazelcastVer=5.0
 gsonVersion=2.8.0
 #hibernateVer=5.5.7.Final
 # grpc
