--- a/demo-communication-api/build.gradle
+++ b/demo-communication-api/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 
     implementation "org.springframework.data:spring-data-commons:${springDataVer}"
     implementation "org.springframework.data:spring-data-jpa:${springDataVer}"
+
+    implementation "com.hazelcast:hazelcast:${hazelcastVer}"
 }
 
 test {
