--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -49,6 +49,10 @@ management.endpoint.shutdown.enabled=true
 # scan in the com/foo/routes classpath
 #camel.springboot.xmlRests = classpath:spring/rest/*.xml
 
+# turn off
+spring.cache.type=none
+spring.data.jpa.repositories.enabled=false
+spring.data.jdbc.repositories.enabled=false
 spring.thymeleaf.enabled=false
 #spring.mvc.view.prefix=/META-INF/resources/WEB-INF/pages/
 #spring.mvc.view.suffix=.html
