--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allprojects {
     }
     configurations.implementation {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
-        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+//        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
     }
     dependencies {
         implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCoroutinesVer}"
