--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,8 @@ h2Version=1.4.200
 pgsqlVersion=42.2.12
 keycloakVer=15.0.0
 
-hazelcastVer=5.0
+#hazelcastVer=5.0
+hazelcastVer=4.2.2
 gsonVersion=2.8.0
 #hibernateVer=5.5.7.Final
 # grpc
