--- a/demo-communication-web/src/main/resources/application.properties
+++ b/demo-communication-web/src/main/resources/application.properties
@@ -61,6 +61,7 @@ server.error.path=/error/
 server.error.whitelabel.enabled=false
 # config http session to db
 spring.session.store-type=none
+spring.quartz.auto-startup=false
 #spring.session.jdbc.cleanup-cron=0 * * * * *
 #server.servlet.session.timeout=5m
 # disable http session
