--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,7 @@ keycloakVer=15.0.0
 #hazelcastVer=5.0
 hazelcastVer=4.2.2
 gsonVersion=2.8.0
+quartzVersion=2.3.2
 #hibernateVer=5.5.7.Final
 # grpc
 grpcVer=1.41.0
