--- a/demo-communication-web/build.gradle
+++ b/demo-communication-web/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-validation:${springbootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-log4j2:${springbootVersion}"
 
+    implementation "org.springframework.boot:spring-boot-starter-quartz:${springbootVersion}"
     implementation "org.springframework.session:spring-session-jdbc:${springSessionVersion}"
 
     implementation "org.apache.commons:commons-dbcp2:${apacheCommonVersion}"
