- default param for fragment - separate session db - config session in hazelcast - config job to db cluster - i18n by session, cookie

--- a/demo-communication-web/build.gradle
+++ b/demo-communication-web/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "org.aspectj:aspectjweaver:${aspectjVersion}"
 
     // libs
+    implementation "org.quartz-scheduler:quartz:${quartzVersion}"
     implementation "org.bouncycastle:bcprov-jdk15on:${bouncycastleVersion}"
 //    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
