--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ allprojects {
         ext {}
     }
     apply plugin: "java"
+    apply plugin: "org.jetbrains.kotlin.jvm"
     repositories {
         mavenCentral()
         mavenLocal()
@@ -19,8 +20,10 @@ allprojects {
         implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCoroutinesVer}"
         implementation "org.slf4j:slf4j-api:${slf4jVersion}"
         implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVer}"
-        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+
+//        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+        testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+//        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     }
     group 'org.harryng.demo'
     version '1.0-SNAPSHOT'
