--- a/gradle.properties
+++ b/gradle.properties
@@ -8,14 +8,13 @@ kotlinCoroutinesVer=1.5.2
 
 # spring
 springVersion=5.3.10
-springbootVersion=2.5.5
+springbootVersion=2.6.3
 springDependencyVer=1.0.11.RELEASE
 springSessionVersion=2.5.2
 springDataVer=2.5.4
 apacheCommonVersion=2.7.0
 aspectjVersion=1.9.4
 jstlVersion=1.2
-
 #tomcatVersion=10.0.10
 tomcatVersion=9.0.52
 
@@ -39,3 +38,5 @@ gsonVersion=2.8.0
 grpcVer=1.41.0
 protobufVer=3.18.0
 grpcKotlinStubVer=1.1.0
+
+kafkaVer=3.1.0
