- kafka client send message

--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,16 @@ allprojects {
     }
     configurations.implementation {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
-//        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
     }
     dependencies {
         implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCoroutinesVer}"
         implementation "org.slf4j:slf4j-api:${slf4jVersion}"
         implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVer}"
 
-//        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-        testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-//        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+//        testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     }
     group 'org.harryng.demo'
     version '1.0-SNAPSHOT'
